no scroll working, pause button working, attempting to fix screen cutoff

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body, html {
 
 .Container {
   width: 90%;
-  min-width: 500px;
   margin: auto;
   display: flex;
   flex-direction: column;
